updated readme, code optimisations